--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.moodle</groupId>
-  <artifactId>doer</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  
-  <repositories>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.moodle</groupId>
+	<artifactId>doer</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>doer-disconf</module>
+		<module>doer-mapper</module>
+	</modules>
+
+	<repositories>
 		<repository>
 			<id>central</id>
 			<name>Central</name>
@@ -25,7 +31,7 @@
 			<name>Nexus Snapshot Repository</name>
 			<url>http://10.211.55.8:8081/nexus/content/repositories/snapshots/</url>
 		</snapshotRepository>
-	</distributionManagement> 
+	</distributionManagement>
 
 	<!-- 集中定义依赖版本号 -->
 	<properties>
@@ -51,7 +57,7 @@
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<jedis.version>2.7.2</jedis.version>
 		<solrj.version>4.10.3</solrj.version>
-		
+
 		<!-- 模块版本号 -->
 		<!-- <disconf-core.version>2.6.32</disconf-core.version> <disconf-client.version>2.6.32</disconf-client.version> 
 			<disconf-client-spring.version>2.6.32</disconf-client-spring.version> -->
@@ -253,9 +259,4 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	<modules>
-		<module>doer-disconf</module>
-		<module>doer-mapper</module>
-	</modules>
-</project>
 </project>
