--- a/doer-disconf/doer-disconf-web/.classpath
+++ b/doer-disconf/doer-disconf-web/.classpath
@@ -13,6 +13,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="profile/rd"/>
+	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry excluding="sql/base/goldendata/1_0_0/|sql/base/goldendata/1_0_0/" kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
