--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,36 @@
 
 	<!-- 集中定义依赖版本号 -->
 	<properties>
+		<!-- commons组件 -->
+		<commons-lang3.version>3.3.2</commons-lang3.version>
+		<commons-lang.version>2.6</commons-lang.version>
+		<commons-io.version>1.3.2</commons-io.version>
+		<commons-net.version>3.3</commons-net.version>
+		<commons-beanutils.version>1.6</commons-beanutils.version>
+		<commons-dbcp.version>1.2.1</commons-dbcp.version>
+		<commons-digester.version>1.6</commons-digester.version>
+		<commons-compress.version>1.7</commons-compress.version>
+		<commons-codec.version>1.9</commons-codec.version>
+		<commons-collections.version>3.2.2</commons-collections.version>
+
 		<junit.version>4.12</junit.version>
+		<!-- Spring項目配置 -->
 		<spring.version>4.1.3.RELEASE</spring.version>
+		<spring.amqp.version>1.4.5.RELEASE</spring.amqp.version>
+		<!--mybatis -->
 		<mybatis.version>3.2.8</mybatis.version>
 		<mybatis.spring.version>1.2.2</mybatis.spring.version>
 		<mybatis.paginator.version>1.2.15</mybatis.paginator.version>
 		<mysql.version>5.0.8</mysql.version>
+		<!-- hibernate -->
+		<hibernate.version>5.0.1.Final</hibernate.version>
+		<zookeeper.version>3.4.8</zookeeper.version>
+
+		<reflections.version>0.9.9-RC1</reflections.version>
+
+		<aspectj.version>1.7.4</aspectj.version>
 		<slf4j.version>1.6.4</slf4j.version>
+		<logback.version>1.0.9</logback.version>
 		<jackson.version>2.4.2</jackson.version>
 		<druid.version>1.0.9</druid.version>
 		<httpclient.version>4.3.5</httpclient.version>
@@ -50,20 +73,12 @@
 		<servlet-api.version>2.5</servlet-api.version>
 		<jsp-api.version>2.0</jsp-api.version>
 		<joda-time.version>2.5</joda-time.version>
-		<commons-lang3.version>3.3.2</commons-lang3.version>
-		<commons-io.version>1.3.2</commons-io.version>
-		<commons-net.version>3.3</commons-net.version>
 		<pagehelper.version>3.4.2-fix</pagehelper.version>
 		<jsqlparser.version>0.9.1</jsqlparser.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
-		<jedis.version>2.7.2</jedis.version>
+		<jedis.version>2.1.0</jedis.version>
 		<solrj.version>4.10.3</solrj.version>
 
-		<!-- 模块版本号 -->
-		<!-- <disconf-core.version>2.6.32</disconf-core.version> <disconf-client.version>2.6.32</disconf-client.version> 
-			<disconf-client-spring.version>2.6.32</disconf-client-spring.version> -->
-
-		<!-- Spring項目配置 -->
 		<encoding>UTF-8</encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
@@ -72,14 +87,21 @@
 		<java.version>1.7</java.version>
 		<source.version>1.7</source.version>
 		<target.version>1.7</target.version>
-		<spring.amqp.version>1.4.5.RELEASE</spring.amqp.version>
 		<cglib.version>2.2.2</cglib.version>
+		<javax.mail.version>1.4.7</javax.mail.version>
+		<gson.version>2.2.4</gson.version>
 		<!-- resource path -->
 		<project.build.online.sourceDir>${project.basedir}/src/main/online-resources</project.build.online.sourceDir>
 		<project.build.offline.sourceDir>${project.basedir}/src/main/resources</project.build.offline.sourceDir>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+			<!--CGlib组件 -->
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>${cglib.version}</version>
+			</dependency>
 			<!-- 时间操作组件 -->
 			<dependency>
 				<groupId>joda-time</groupId>
@@ -88,9 +110,19 @@
 			</dependency>
 			<!-- Apache工具组件 -->
 			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>${commons-fileupload.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>${commons-lang3.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>${commons-lang.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -102,11 +134,51 @@
 				<artifactId>commons-net</artifactId>
 				<version>${commons-net.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>${commons-beanutils.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>${commons-collections.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>${commons-dbcp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-digester</groupId>
+				<artifactId>commons-digester</artifactId>
+				<version>${commons-digester.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-compress</artifactId>
+				<version>${commons-compress.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>${commons-codec.version}</version>
+			</dependency>
 			<!-- Jackson Json处理工具包 -->
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-asl</artifactId>
+				<version>1.9.13</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.gson</groupId>
+				<artifactId>gson</artifactId>
+				<version>${gson.version}</version>
 			</dependency>
 			<!-- httpclient -->
 			<dependency>
@@ -127,6 +199,16 @@
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>${slf4j.version}</version>
 			</dependency>
+			<!-- <dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
+			</dependency> -->
 			<!-- Mybatis -->
 			<dependency>
 				<groupId>org.mybatis</groupId>
@@ -186,6 +268,26 @@
 				<artifactId>spring-aspects</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.amqp</groupId>
+				<artifactId>spring-rabbit</artifactId>
+				<version>${spring.amqp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjtools</artifactId>
+				<version>${aspectj.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${aspectj.version}</version>
+			</dependency>
 			<!-- JSP相关 -->
 			<dependency>
 				<groupId>jstl</groupId>
@@ -204,12 +306,6 @@
 				<version>${jsp-api.version}</version>
 				<scope>provided</scope>
 			</dependency>
-			<!-- 文件上传组件 -->
-			<dependency>
-				<groupId>commons-fileupload</groupId>
-				<artifactId>commons-fileupload</artifactId>
-				<version>${commons-fileupload.version}</version>
-			</dependency>
 			<!-- Redis客户端 -->
 			<dependency>
 				<groupId>redis.clients</groupId>
@@ -222,6 +318,82 @@
 				<artifactId>solr-solrj</artifactId>
 				<version>${solrj.version}</version>
 			</dependency>
+			<!-- mail -->
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>mail</artifactId>
+				<version>${javax.mail.version}</version>
+			</dependency>
+			<!-- zookeeper -->
+			<dependency>
+				<groupId>org.apache.zookeeper</groupId>
+				<artifactId>zookeeper</artifactId>
+				<version>${zookeeper.version}</version>
+			</dependency>
+			<!-- 反射组件 -->
+			<dependency>
+				<groupId>org.reflections</groupId>
+				<artifactId>reflections</artifactId>
+				<version>${reflections.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${hibernate.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.14.4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>xerces</groupId>
+				<artifactId>xmlParserAPIs</artifactId>
+				<version>2.6.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>xerces</groupId>
+				<artifactId>xerces</artifactId>
+				<version>2.4.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>19.0-rc2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.googlecode.jmockit</groupId>
+				<artifactId>jmockit</artifactId>
+				<version>1.5</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.github.tomakehurst</groupId>
+				<artifactId>wiremock</artifactId>
+				<version>1.46</version>
+				<scope>test</scope>
+				<!-- Include this if you have dependency conflicts for Guava, Jetty, 
+					Jackson or Apache HTTP Client -->
+				<classifier>standalone</classifier>
+			</dependency>
+
+
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+			</dependency>
+
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
