--- a/doer-disconf/doer-disconf-web/profile/rd/log4j.properties
+++ b/doer-disconf/doer-disconf-web/profile/rd/log4j.properties
@@ -1,5 +1,5 @@
 
-log4j.rootLogger=INFO,dailyRolling,CONSOLE
+log4j.rootLogger=INFO,CONSOLE
 
 log4j.logger.org.apache.zookeeper=WARN
 log4j.logger.org.springframework=INFO
