先到这里吧。

--- a/doer-disconf/doer-disconf-web/pom.xml
+++ b/doer-disconf/doer-disconf-web/pom.xml
@@ -119,7 +119,10 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.20</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+		</dependency>
 		<!-- test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
