--- a/doer-entity/pom.xml
+++ b/doer-entity/pom.xml
@@ -5,6 +5,5 @@
     <artifactId>doer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>doer-mapper</artifactId>
-  
+  <artifactId>doer-entity</artifactId>
 </project>
