--- a/doer-orm/pom.xml
+++ b/doer-orm/pom.xml
@@ -20,7 +20,7 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.moodle</groupId> 
+			<groupId>com.moodle</groupId>
 			<artifactId>doer-disconf-client</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -31,11 +31,16 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-		</dependency>
+		</dependency> 
 		<dependency>
 			<groupId>com.github.jsqlparser</groupId>
 			<artifactId>jsqlparser</artifactId>
 			<version>0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-core</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 		<!-- MySql -->
 		<dependency>
@@ -59,6 +64,10 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
 		</dependency>
 	</dependencies>
 </project>
