--- a/doer-common/pom.xml
+++ b/doer-common/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 		<!-- 日志处理 -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
